<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.redroom.ActivityBookBorrow">

    <include
        layout="@layout/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/container_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/book_borrow1"
            style="@style/BuyBorrowText"
            android:text="@string/borrow_1" />

        <TextView
            android:id="@+id/book_borrow2"
            style="@style/BuyBorrowText"
            android:text="@string/borrow_2" />

        <TextView
            android:id="@+id/book_borrow3"
            style="@style/BuyBorrowText"
            android:text="@string/borrow_3" />

    </LinearLayout>

</LinearLayout>
