<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.redroom.MainActivity">

    <include
        layout="@layout/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/container_large" />

    <android.support.v4.view.ViewPager
        android:id="@+id/general_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/redRoomMain"
        android:layout_weight="1"
        android:clipToPadding="true" />

        <LinearLayout
            android:id="@+id/general_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/container_medium"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/margin_medium"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/fragment_red_room"
                android:id="@+id/menu_red_room"
                style="@style/MenuImages"
                android:src="@drawable/ic_share_dark_24px" />

            <ImageView
                android:contentDescription="@string/fragment_browse"
                android:id="@+id/menu_browse"
                style="@style/MenuImages"
                android:src="@drawable/ic_library_books_dark_24px" />

            <ImageView
                android:contentDescription="@string/fragment_collection"
                android:id="@+id/menu_collection"
                style="@style/MenuImages"
                android:src="@drawable/ic_collections_bookmark_dark_24px" />

            <ImageView
                android:contentDescription="@string/fragment_borrow"
                android:id="@+id/menu_borrow"
                style="@style/MenuImages"
                android:src="@drawable/ic_book_dark_24px" />
        </LinearLayout>

</LinearLayout>
